[metadata]
name = doppler
author = David Nidever
author_email = davidnidever@gmail.com
license = MIT
license_file = LICENSE
url = https://github.com/dnidever/doppler
description = A general-purpose stellar radial velocity determination software.
long_description = file: A general-purpose stellar radial velocity determination software.
long_description_content_type = text/x-rst
edit_on_github = False
github_project = dnidever/doppler
version = 1.1.7

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    astropy
    scipy

[options.entry_points]

[options.extras_require]
# Must be checked against requirements-dev.txt
test =
    pytest
    pytest-astropy
    ipython
docs =
    sphinx
    sphinx-astropy
    nbsphinx
    nbconvert
    nbformat
    ipykernel

[options.package_data]
* = *.c
thejoker.src = fast_likelihood.pyx
thejoker.tests = coveragerc

[tool:pytest]
testpaths = "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
